<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/infoPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:text="@string/picAdd"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilePicRegister"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:importantForAccessibility="no"
        android:onClick="uploadPic"
        android:src="@drawable/default_profile_pic"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/infoPrompt"
        app:tint="@color/black" />

    <EditText
        android:id="@+id/displayNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/displayName"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/profilePicRegister" />

    <EditText
        android:id="@+id/userNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginTop="24dp"
        android:hint="@string/username"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@+id/displayNameRegister"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/userNameRegister" />

    <EditText
        android:id="@+id/verifyPasswordRegister"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/verifyPassword"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegister" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="335dp"
        android:layout_height="61dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/red"
        android:onClick="register"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyPasswordRegister"
        app:layout_constraintVertical_bias="0.054"
        tools:ignore="UsingOnClickInXml" />


    <Button
        android:id="@+id/goToMainButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/red"
        android:onClick="moveToMainUp"
        android:text="@string/go_to_home_page"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/profilePicRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/infoPrompt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/invalidInput"
        android:textColor="@color/error_red"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:visibility="gone"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />



</androidx.constraintlayout.widget.ConstraintLayout>