<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <LinearLayout
        android:id="@+id/loginLogoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/loginFields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp">


        <ImageView
            android:id="@+id/loginIcon"
            android:layout_width="132dp"
            android:layout_height="103dp"
            app:srcCompat="@drawable/ic_logo"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iTube"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginLogoLayout"
        app:layout_constraintVertical_bias="0.5">

        <EditText
            android:id="@+id/usernameLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="335dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/red"
        android:onClick="moveToFeed"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginFields"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="335dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/red"
        android:onClick="Register"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
 />

    <Button
        android:id="@+id/goToMainButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/red"
        android:onClick="moveToMainIn"
        android:text="@string/go_to_home_page"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/loginFields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLogoLayout"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
