<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/addPostPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/addVidTitle"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/postImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="24dp"
        android:layout_marginTop="13dp"
        android:importantForAccessibility="no"
        android:onClick="uploadImage"
        android:src="@drawable/add_video"
        android:tag="uri"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPostPrompt"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/videoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/addDescription"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="24dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addVid"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postVideo" />

    <ImageView
        android:id="@+id/postVideo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="24dp"
        android:layout_marginTop="4dp"
        android:importantForAccessibility="no"
        android:onClick="uploadVideo"
        android:src="@drawable/add_video"
        android:tag="uri"
        app:layout_constraintEnd_toStartOf="@+id/postImage"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPostPrompt" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="25dp"
        android:text="@string/addImage"
        app:layout_constraintBottom_toTopOf="@+id/videoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postVideo"
        app:layout_constraintVertical_bias="0.0" />

    <VideoView
        android:id="@+id/postVideoView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoText" />

    <Button
        android:id="@+id/btnAddPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/add_post"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postVideoView"
 />

</androidx.constraintlayout.widget.ConstraintLayout>
