<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/videoLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Top Layout - Author Information -->
    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/ivAuthorPicture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/default_profile_pic"
            android:importantForAccessibility="no" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/displayName"
                android:textSize="18sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTimeStamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="12sp"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

    </LinearLayout>

    <!-- Content Text -->
    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/sample_video"
        android:layout_below="@+id/topLayout" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

    <!-- Video Thumbnail -->
    <ImageView
        android:id="@+id/ivPicture"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/add_video"
        android:adjustViewBounds="true"
        android:layout_below="@+id/tvContent"
        android:scaleType="centerCrop" />

    <!-- Bottom Layout - Like and Share Buttons -->
    <LinearLayout
        android:id="@+id/botLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_below="@id/ivPicture"/>

    <!-- Comment Entry Layout -->
    <LinearLayout
        android:id="@+id/commentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/botLayout"/>

    <!-- RecyclerView for Comments -->

</RelativeLayout>
