<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/videoLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/ivAuthorPicture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:importantForAccessibility="no"
            android:src="@drawable/default_profile_pic" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="8">

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/displayName"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTimeStamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/date"
                android:textSize="11sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/sample_video"
        android:layout_below="@+id/topLayout" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="254dp"
        android:layout_below="@+id/tvContent"
        android:layout_marginTop="1dp"
        android:adjustViewBounds="true"
        android:importantForAccessibility="no" />

    <LinearLayout
        android:id="@+id/botLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_below="@+id/videoView">

        <TextView
            android:id="@+id/likeCount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:importantForAccessibility="no"
            android:minHeight="48dp"
            android:src="@drawable/like"
            app:tint="@color/light_red"/>


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:importantForAccessibility="no"
            android:minHeight="48dp"
            android:src="@drawable/share"
            android:onClick="sharePost"
            app:tint="@color/red"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/commentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/botLayout">

        <EditText
            android:id="@+id/etNewComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/comment_hint"
            android:layout_weight="4"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/black" />

        <ImageButton
            android:id="@+id/btnAddComment"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:minHeight="48dp"
            android:src="@drawable/ic_comment"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/commentLayout"
        android:layout_marginTop="0dp" />

</RelativeLayout>
